# docs/swagger.json
@@ -71,7 +71,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "asd",
+                        "description": "user id",
                         "name": "user_id",
                         "in": "path",
                         "required": true
@@ -149,15 +149,26 @@
     "definitions": {
         "dto.CreateUserDto": {
             "type": "object",
+            "required": [
+                "age",
+                "name",
+                "secondname"
+            ],
             "properties": {
                 "age": {
-                    "type": "integer"
+                    "type": "integer",
+                    "maximum": 99,
+                    "minimum": 1
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 30,
+                    "minLength": 1
                 },
                 "secondname": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 30,
+                    "minLength": 1
                 }
             }
         },
@@ -165,18 +176,30 @@
             "type": "object",
             "properties": {
                 "age": {
-                    "type": "integer"
+                    "type": "integer",
+                    "maximum": 99,
+                    "minimum": 1
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 30,
+                    "minLength": 1
                 },
                 "secondname": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 30,
+                    "minLength": 1
                 }
             }
         },
         "model.User": {
             "type": "object",
+            "required": [
+                "age",
+                "id",
+                "name",
+                "secondname"
+            ],
             "properties": {
                 "age": {
                     "type": "integer"
